# rclhs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rclhs.cabal
c-wrap/: wrap.c  wrap.h
example_types/: CMakeLists.txt  package.xml
example_types/msg/: Counter.msg  IntSequence.msg
example_types/srv/: AddTwoInts.srv
examples/add_two_ints_client/: CMakeLists.txt  add-two-ints-client.cabal  package.xml
examples/add_two_ints_client/app/: Main.hs
examples/add_two_ints_server/: .gitignore  CMakeLists.txt  add-two-ints-server.cabal  package.xml
examples/add_two_ints_server/app/: Main.hs
examples/arr_pub/: CMakeLists.txt  arr-pub.cabal  package.xml
examples/arr_pub/app/: Main.hs
examples/arr_sub/: CMakeLists.txt  arr-sub.cabal  package.xml
examples/arr_sub/app/: Main.hs
examples/minimal_publisher/: CMakeLists.txt  minimal-publisher.cabal  package.xml
examples/minimal_publisher/app/: Main.hs
examples/minimal_subscriber/: CMakeLists.txt  minimal-subscriber.cabal  package.xml
examples/minimal_subscriber/app/: Main.hs
pubsub_example/: CMakeLists.txt  package.xml  pubsub-example.cabal
pubsub_example/app/: Main.hs
rclhs/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  rclhs.cabal
rclhs/c-wrap/: wrap.c  wrap.h
rclhs/cmake/: generate_cabal_project_local.cmake  rclhs-extras.cmake
rclhs/src/: RclHs.hs
rclhs/src/RclHs/: Bindings.hs  Types.hs
rclhs/src/RclHs/Types/: Dynamic.hsc
rosidl_generator_hs/: CMakeLists.txt  package.xml  rosidl_generator_hs-extras.cmake
rosidl_generator_hs/cmake/: rosidl_generator_hs_generate_interfaces.cmake
rosidl_generator_hs/resource/: cabal.j2  msg.chs.j2  msg.hsc.j2  srv.hsc.j2
src/: RclHs.hs
src/RclHs/: Bindings.hs
test/: Main.hs  PubSubExample.hs
