cabal-version:      3.0
name:               rclhs
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Billy Moore
maintainer:         billyedmoore@yahoo.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

-- Owns the types used by rclhs
-- Required to prevent circular deps
library rclhs-types
    exposed-modules: RclHs.Types
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   src
    default-language: GHC2021

library
    import:           warnings
    exposed-modules:  RclHs
    other-modules: RclHs.Bindings
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0,
                      rclhs-types
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: CApiFFI

    include-dirs:     c-wrap
    c-sources:        c-wrap/wrap.c
    includes:         wrap.h

    extra-libraries:  rcl 
                      rcutils
                      rmw
                      rmw_implementation
                      rosidl_runtime_c
                      rosidl_typesupport_c
                      rosidl_typesupport_introspection_c
                      std_msgs__rosidl_generator_c
                      std_msgs__rosidl_typesupport_c
                      std_msgs__rosidl_typesupport_introspection_c
                      service_msgs__rosidl_generator_c
                      service_msgs__rosidl_typesupport_c
                      service_msgs__rosidl_typesupport_introspection_c

test-suite rclhs-test
    import:           warnings
    default-language: GHC2021
    other-modules: PubSubExample
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        tasty,
        tasty-hunit,
        rclhs
