cabal-version:      3.0
name:               rclhs
version:            0.1.0.0
-- synopsis:
-- description:
author:             Billy Moore
maintainer:         billyedmoore@yahoo.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:
                    c-wrap/wrap.c
                    c-wrap/wrap.h

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  RclHs
                      RclHs.Types
    other-modules: RclHs.Bindings
                   RclHs.Types.Dynamic
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0,
                      vector,
                      vector-sized
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: CApiFFI
                        AllowAmbiguousTypes
    include-dirs:     c-wrap
    c-sources:        c-wrap/wrap.c
    includes:         wrap.h
    extra-libraries:  rcl 
                      rcutils
                      rmw
                      rmw_implementation
                      rosidl_runtime_c
                      rosidl_typesupport_c
                      rosidl_typesupport_introspection_c
                      std_msgs__rosidl_generator_c
                      std_msgs__rosidl_typesupport_c
                      std_msgs__rosidl_typesupport_introspection_c
                      service_msgs__rosidl_generator_c
                      service_msgs__rosidl_typesupport_c
                      service_msgs__rosidl_typesupport_introspection_c
