<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_generator_hs</name>
  <version>0.1.0</version>
  <description>Generate the ROS 2 Haskell interfaces.</description>
  <maintainer email="billyedmoore@yahoo.com">Billy Moore</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <depend>rosidl_parser</depend>
  
  <member_of_group>rosidl_generator_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <rosidl_generate_idl_interfaces>
      <plugin>cmake/rosidl_generator_hs_generate_interfaces.cmake</plugin>
    </rosidl_generate_idl_interfaces>
  </export>
</package>
