cabal-version:      3.0
name:               arr-pub
version:            0.1.0.0
-- synopsis:
-- description:
author:             Billy Moore
maintainer:         billyedmoore@yahoo.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable arr-pub
    import:           warnings
    main-is:          Main.hs
    ghc-options: -g
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0,
                      rclhs,
                      vector-sized,
                      example-types-hs,
                      random
    hs-source-dirs:   app
    default-language: GHC2021
